--- a/statefull/src/main/resources/application.yml
+++ b/statefull/src/main/resources/application.yml
@@ -15,11 +15,36 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQL81Dialect
+  flyway:
+    locations: classpath:db/migration
+    enabled: true
+    baselineOnMigrate: true
+  security:
+    user:
+      password: password
 
 springdoc:
   api-docs:
     path: /api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui
 
 app:
   hello:
-    name: ${HELLO_NAME}
+    name: "Eternality"
+
+jwt:
+  public:
+    key: classpath:rsa.public.key
+  private:
+    key: classpath:rsa.private.key
+
+management:
+   security:
+      enabled: false
+
+logging:
+  level:
+    org.hibernate.sql: debug
+    root: info
